--- a/css.css
+++ b/css.css
@@ -8,12 +8,14 @@ body {
 h1 {
   text-align: center;
   color: #333;
+font-size: 18px;
 }
 
 h2 {
   text-align: center;
   margin-bottom: 20px;
   color: #333;
+font-size: 8px;
 }
 
 /* Container */
@@ -26,7 +28,7 @@ h2 {
 
 .table-container {
   flex: 1 1 100%;
-  max-width: 600px;
+  max-width: 350px;
   background: #fff;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -36,30 +38,31 @@ h2 {
 
 /* Table Styles */
 table {
-  width: 100%;
+  width: 350px;
   border-collapse: collapse;
-  min-width: 400px;
+  min-width: 0px;
   border: 1px solid #000; 
   table-layout: fixed;
 }
 
 th, td {
   text-align: left;
-  padding: 12px; 
+  padding: 8px; 
   border: 1px solid #000;
+font-size: 12px;
 }
 
 th:nth-child(1), td:nth-child(1) {
   text-align: center;
-  width: 10px;
+  width: 8px;
 }
 
 th:nth-child(2), td:nth-child(2) {
-  width: 80px;
+  width: 50px;
 }
 
 th:nth-child(3), td:nth-child(3) {
-  width: 90px; 
+  width: 80px; 
 }
 
 th {
